--- a/subgraphs/dexcandles/dexcandles.template.yaml
+++ b/subgraphs/dexcandles/dexcandles.template.yaml
@@ -20,14 +20,14 @@ dataSources:
         - Pair
       abis:
         - name: Factory
-          file: ../../node_modules/@sushiswap/core/build/abi/UniswapV2Factory.json
+          file: ../../node_modules/@joe-defi/core//abi/JoeFactory.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handleNewPair
 templates:
   - kind: ethereum/contract
     name: Pair
-    network: {{ startBlock }}
+    network: {{ network }}
     source:
       abi: Pair
     mapping:
@@ -39,7 +39,7 @@ templates:
         - Pair
       abis:
         - name: Pair
-          file: ../../node_modules/@sushiswap/core/build/abi/UniswapV2Pair.json
+          file: ../../node_modules/@joe-defi/core/abi/JoePair.json
       eventHandlers:
         - event: Swap(indexed address,uint256,uint256,uint256,uint256,indexed address)
           handler: handleSwap
