--- a/packages/abis/package.json
+++ b/packages/abis/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@joe-defi/subgraph-abis",
+    "name": "@traderjoe-xyz/subgraph-abis",
     "version": "1.0.0",
     "description": "Abis",
     "license": "MIT",
