--- a/subgraphs/vesting/package.json
+++ b/subgraphs/vesting/package.json
@@ -2,11 +2,11 @@
     "name": "vesting",
     "license": "MIT",
     "version": "1.0.0",
-    "author": "SushiSwap",
+    "author": "Trader Joe",
     "scripts": {
         "codegen": "graph codegen vesting.yaml",
         "build": "graph build vesting.yaml",
-        "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ sushiswap/vesting vesting.yaml",
+        "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/vesting vesting.yaml",
         "create-local": "graph create --node http://localhost:8020/ /sushiswap/sushiswap",
         "remove-local": "graph remove --node http://localhost:8020/ /sushiswap/sushiswap",
         "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 /sushiswap/sushiswap",
