--- a/subgraphs/masterchefV2/masterchefV2.avax.yaml
+++ b/subgraphs/masterchefV2/masterchefV2.avax.yaml
@@ -5,24 +5,24 @@ schema:
   file: ./masterchefV2.graphql
 dataSources:
   - kind: ethereum/contract
-    name: MasterChefV2
+    name: MasterChefJoeV2
     network: avalanche
     source:
-      address: '0xd6a4F121CA35509aF06A0Be99093d08462f53052'
-      abi: MasterChefV2
+      address: '0xd6a4f121ca35509af06a0be99093d08462f53052'
+      abi: MasterChefJoeV2
       startBlock: 2486000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - MasterChefV2
+        - MasterChef
         - History
         - Pool
         - PoolHistory
         - User
       abis:
-        - name: MasterChefV2
+        - name: MasterChefJoeV2
           file: ../../node_modules/@traderjoe-xyz/core/abi/MasterChefJoeV2.json
         - name: Factory
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
