--- a/subgraphs/masterchefV2/masterchefV2.template.yaml
+++ b/subgraphs/masterchefV2/masterchefV2.template.yaml
@@ -5,24 +5,24 @@ schema:
   file: ./masterchefV2.graphql
 dataSources:
   - kind: ethereum/contract
-    name: MasterChefV2
+    name: MasterChefJoeV2
     network: {{ network }}
     source:
       address: '{{ address }}'
-      abi: MasterChefV2
+      abi: MasterChefJoeV2
       startBlock: {{ startBlock }}
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - MasterChefV2
+        - MasterChef
         - History
         - Pool
         - PoolHistory
         - User
       abis:
-        - name: MasterChefV2
+        - name: MasterChefJoeV2
           file: ../../node_modules/@traderjoe-xyz/core/abi/MasterChefJoeV2.json
         - name: Factory
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
