--- a/subgraphs/masterchefV2/masterChefV2.rinkeby.yaml
+++ b/subgraphs/masterchefV2/masterChefV2.rinkeby.yaml
@@ -5,24 +5,24 @@ schema:
   file: ./masterchefV2.graphql
 dataSources:
   - kind: ethereum/contract
-    name: MasterChefV2
+    name: MasterChefJoeV2
     network: rinkeby
     source:
       address: '0xff6eA1C23107e0D835930612ee2F4Cd975331D0D'
-      abi: MasterChefV2
+      abi: MasterChefJoeV2
       startBlock: 8455513
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
-        - MasterChefV2
+        - MasterChef
         - History
         - Pool
         - PoolHistory
         - User
       abis:
-        - name: MasterChefV2
+        - name: MasterChefJoeV2
           file: ../../node_modules/@traderjoe-xyz/core/abi/MasterChefJoeV2.json
         - name: Factory
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
