--- a/subgraphs/masterchefV2/masterchefV2.template.yaml
+++ b/subgraphs/masterchefV2/masterchefV2.template.yaml
@@ -43,4 +43,6 @@ dataSources:
           handler: add
         - event: Set(indexed uint256,uint256,indexed address,bool)
           handler: set
+        - event: UpdateEmissionRate(indexed address,uint256)
+          handler: updateEmissionRate
       file: ./src/masterchefV2.ts
