--- a/subgraphs/masterchefV2/masterchefV2.template.yaml
+++ b/subgraphs/masterchefV2/masterchefV2.template.yaml
@@ -21,6 +21,7 @@ dataSources:
         - Pool
         - PoolHistory
         - User
+        - Rewarder
       abis:
         - name: MasterChefJoeV2
           file: ../../node_modules/@traderjoe-xyz/core/abi/MasterChefJoeV2.json
@@ -30,6 +31,8 @@ dataSources:
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
         - name: ERC20
           file: ../../node_modules/@traderjoe-xyz/core/abi/ERC20.json
+        - name: Rewarder
+          file: ../../node_modules/@traderjoe-xyz/core/abi/SimpleRewarderPerSec.json
       eventHandlers:
         - event: Deposit(indexed address,indexed uint256,uint256)
           handler: deposit
