--- a/subgraphs/masterchefV2/masterChefV2.rinkeby.yaml
+++ b/subgraphs/masterchefV2/masterChefV2.rinkeby.yaml
@@ -21,6 +21,7 @@ dataSources:
         - Pool
         - PoolHistory
         - User
+        - Rewarder
       abis:
         - name: MasterChefJoeV2
           file: ../../node_modules/@traderjoe-xyz/core/abi/MasterChefJoeV2.json
@@ -30,6 +31,8 @@ dataSources:
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
         - name: ERC20
           file: ../../node_modules/@traderjoe-xyz/core/abi/ERC20.json
+        - name: Rewarder
+          file: ../../node_modules/@traderjoe-xyz/core/abi/SimpleRewarderPerSec.json
       eventHandlers:
         - event: Deposit(indexed address,indexed uint256,uint256)
           handler: deposit
@@ -43,4 +46,6 @@ dataSources:
           handler: add
         - event: Set(indexed uint256,uint256,indexed address,bool)
           handler: set
+        - event: UpdateEmissionRate(indexed address,uint256)
+          handler: updateEmissionRate
       file: ./src/masterchefV2.ts
