--- a/subgraphs/maker/maker.avax.yaml
+++ b/subgraphs/maker/maker.avax.yaml
@@ -1,25 +1,27 @@
-specVersion: 0.0.3
-description: Maker
-repository: https://github.com/traderjoe-xyz/joe-subgraphs
+specVersion: 0.0.2
+description: JoeMaker
 schema:
   file: ./maker.graphql
 dataSources:
   - kind: ethereum/contract
-    name: Maker
+    name: JoeMaker
     network: avalanche
     source:
       address: '0x861726BFE27931A4E22a7277bDe6cb8432b65856'
-      abi: Pair
+      abi: JoeMaker
       startBlock: 2486000
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
+      file: ./src/mappings/maker.ts
       entities:
         - Maker
         - Server
         - Serving
       abis:
+        - name: JoeMaker 
+          file: ../../node_modules/@traderjoe-xyz/core/abi/JoeMaker.json
         - name: Pair
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
         - name: ERC20
@@ -27,6 +29,5 @@ dataSources:
         - name: Factory
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
       eventHandlers:
-        - event: Swap(indexed address,uint256,uint256,uint256,uint256,indexed address)
-          handler: served
-      file: ./src/maker.ts
+        - event: LogConvert(indexed address,indexed address,indexed address,uint256,uint256,uint256)
+          handler: handleLogConvert
