--- a/subgraphs/dexcandles/dexcandles.avax.yaml
+++ b/subgraphs/dexcandles/dexcandles.avax.yaml
@@ -18,9 +18,12 @@ dataSources:
       file: ./src/dexcandles.ts
       entities:
         - Pair
+        - Factory
       abis:
         - name: Factory
           file: ../../node_modules/@traderjoe-xyz/core//abi/JoeFactory.json
+        - name: ERC20
+          file: ../../node_modules/@traderjoe-xyz/core/abi/ERC20.json
       eventHandlers:
         - event: PairCreated(indexed address,indexed address,address,uint256)
           handler: handleNewPair
