Add MasterChefV3 subgraph

--- a/subgraphs/masterchefV2/package.json
+++ b/subgraphs/masterchefV2/package.json
@@ -7,21 +7,18 @@
         "prepare:avax": "mustache config/avax.json masterchefV2.template.yaml > masterchefV2.avax.yaml",
         "prepare:rinkeby": "mustache config/rinkeby.json masterchefV2.template.yaml > masterchefV2.rinkeby.yaml",
         "prepare:fuji": "mustache config/fuji.json masterchefV2.template.yaml > masterchefV2.fuji.yaml",
-
         "codegen:avax": "graph codegen masterchefV2.avax.yaml",
         "codegen:rinkeby": "graph codegen masterchefV2.rinkeby.yaml",
         "codegen:fuji": "graph codegen masterchefV2.fuji.yaml",
-
         "build:avax": "graph build masterchefV2.avax.yaml",
         "build:rinkeby": "graph build masterchefV2.rinkeby.yaml",
         "build:fuji": "graph build masterchefV2.fuji.yaml",
-
         "deploy:stage": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefv2-stage masterchefV2.avax.yaml",
         "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefv2 masterchefV2.avax.yaml",
         "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefV2-rinkeby masterchefV2.rinkeby.yaml",
-
         "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/masterchefV2",
         "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/masterchefV2",
         "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/masterchefV2 masterchefV2.fuji.yaml"
-    }
+    },
+    "dependencies": {}
 }
