Enable nonFatalErrors feature

--- a/subgraphs/dexcandles/dexcandles.avax.yaml
+++ b/subgraphs/dexcandles/dexcandles.avax.yaml
@@ -1,6 +1,7 @@
 specVersion: 0.0.2
 description: DEX trades candles (5m/15m/1h/4h/1d/1w)
 features:
+  - nonFatalErrors
   - grafting
 repository: https://github.com/traderjoe-xyz/joe-subgraphs
 graft:
