--- a/subgraphs/stablejoe/stablejoe.rinkeby.yaml
+++ b/subgraphs/stablejoe/stablejoe.rinkeby.yaml
@@ -1,4 +1,5 @@
 specVersion: 0.0.2
+description: StableJoeStaking
 schema:
   file: ./stablejoe.graphql
 dataSources:
@@ -8,15 +9,16 @@ dataSources:
     source:
       address: "0x12ba94D04a7a7F0882155b2c55b88e269428227B"
       abi: StableJoeStaking
+      startBlock: 10219081
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
+      file: ./src/mappings/stablejoe.ts
       entities:
-        - ClaimReward
-        - Deposit
-        - DepositFeeChanged
-        - Withdraw
+        - StableJoe
+        - User
+        - StableJoeDayData
       abis:
         - name: StableJoeStaking
           file: ./abis/StableJoeStaking.json
@@ -31,4 +33,3 @@ dataSources:
           handler: handleDepositFeeChanged
         - event: Withdraw(indexed address,uint256)
           handler: handleWithdraw
-      file: ./src/mappings/stablejoe.ts
