--- a/subgraphs/stablejoe/stablejoe.rinkeby.yaml
+++ b/subgraphs/stablejoe/stablejoe.rinkeby.yaml
@@ -7,7 +7,7 @@ dataSources:
     name: StableJoeStaking
     network: rinkeby
     source:
-      address: "0x12ba94D04a7a7F0882155b2c55b88e269428227B"
+      address: "0x12ba94d04a7a7f0882155b2c55b88e269428227b"
       abi: StableJoeStaking
       startBlock: 10219081
     mapping:
@@ -21,7 +21,7 @@ dataSources:
         - StableJoeDayData
       abis:
         - name: StableJoeStaking
-          file: ./abis/StableJoeStaking.json
+          file: ../../node_modules/@traderjoe-xyz/core/abi/StableJoeStaking.json
         - name: Pair
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
       eventHandlers:
