--- a/subgraphs/stablejoe/package.json
+++ b/subgraphs/stablejoe/package.json
@@ -8,14 +8,11 @@
     "codegen:rinkeby": "graph codegen stablejoe.rinkeby.yaml",
     "build:avax": "graph build stablejoe.avax.yaml",
     "build:rinkeby": "graph build stablejoe.rinkeby.yaml",
-    "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/stablejoe stablejoe.avax.yaml",
+    "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe stablejoe.avax.yaml",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/sjoe-rinkeby stablejoe.rinkeby.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/stablejoe --access-token ",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/stablejoe --access-token ",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 --access-token traderjoe-xyz/stablejoe stablejoe.fuji.yaml"
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 --access-token traderjoe-xyz/sjoe stablejoe.fuji.yaml"
   },
-  "dependencies": {
-    "@graphprotocol/graph-cli": "0.26.0",
-    "@graphprotocol/graph-ts": "0.24.1"
-  }
+  "dependencies": {}
 }
