Fix money maker subgraph

--- a/subgraphs/moneymaker/moneymaker.avax.yaml
+++ b/subgraphs/moneymaker/moneymaker.avax.yaml
@@ -27,6 +27,8 @@ dataSources:
           file: ../../node_modules/@traderjoe-xyz/core/abi/ERC20.json
         - name: Factory
           file: ../../node_modules/@traderjoe-xyz/core/abi/JoeFactory.json
+        - name: Pair
+          file: ../../node_modules/@traderjoe-xyz/core/abi/JoePair.json
       eventHandlers:
         - event: LogConvert(indexed address,indexed address,indexed address,uint256,uint256,uint256)
           handler: handleLogConvert
