--- a/subgraphs/vejoe/vejoe.rinkeby.yaml
+++ b/subgraphs/vejoe/vejoe.rinkeby.yaml
@@ -29,5 +29,5 @@ dataSources:
           handler: handleClaim
         - event: Deposit(indexed address,uint256)
           handler: handleDeposit
-        - event: Withdraw(indexed address,uint256)
+        - event: Withdraw(indexed address,uint256,uint256)
           handler: handleWithdraw
