--- a/subgraphs/vejoe/package.json
+++ b/subgraphs/vejoe/package.json
@@ -10,6 +10,7 @@
     "build:rinkeby": "graph build vejoe.rinkeby.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/vejoe vejoe.avax.yaml",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/vejoe-rinkeby vejoe.rinkeby.yaml",
+    "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/vejoe-fuji vejoe.fuji.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/vejoe --access-token ",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/vejoe --access-token ",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 --access-token traderjoe-xyz/vejoe vejoe.fuji.yaml"
