--- a/subgraphs/masterchef/package.json
+++ b/subgraphs/masterchef/package.json
@@ -18,6 +18,7 @@
 
         "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchef masterchef.avax.yaml",
         "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchef-rinkeby-ii masterchef.rinkeby.yaml",
+        "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchef-fuji masterchef.fuji.yaml",
 
         "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/masterchef",
         "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/masterchef",
