--- a/subgraphs/masterchefV3/package.json
+++ b/subgraphs/masterchefV3/package.json
@@ -16,6 +16,7 @@
     "deploy:stage": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefv3-stage masterchefV3.avax.yaml",
     "deploy:avax": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefv3 masterchefV3.avax.yaml",
     "deploy:rinkeby": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefV3-rinkeby masterchefV3.rinkeby.yaml",
+    "deploy:fuji": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ traderjoe-xyz/masterchefV3-fuji masterchefV3.fuji.yaml",
     "create-local": "graph create --node http://localhost:8020/ traderjoe-xyz/masterchefV3",
     "remove-local": "graph remove --node http://localhost:8020/ traderjoe-xyz/masterchefV3",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 traderjoe-xyz/masterchefV3 masterchefV3.fuji.yaml"
